src/test/resources/org/nest/nestml/_cocos/valid/functionParameterHasTypeName.nestml
neuron iaf:
  function f(var integer):
  end
end