src/test/resources/org/nest/nestml/_cocos/invalid/functionParameterHasTypeName.nestml
neuron iaf:

  function f(pA integer):
  end

  function f(mV integer):
  end
end